--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       name="viewport"
       content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>"
     />
-    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png" />
+    <link rel="icon" type="image/jpeg" href="icons/shaka-favicon.jpeg" />
+    <link rel="shortcut icon" type="image/jpeg" href="icons/shaka-favicon.jpeg" />
   </head>
   <body>
     <!-- quasar:entry-point -->
